// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example / Alerts Sizes 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="flex flex-col items-center justify-center"
  >
    <div
      className="alert primary small undefined opacity-80"
      size="small"
    >
      <div
        className="pr-1"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
          />
          <path
            d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
          />
        </svg>
      </div>
      This is a small Alert!
      <div
        className="pl-8 cursor-pointer"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
          />
        </svg>
      </div>
    </div>
    <br />
    <div
      className="alert primary medium undefined opacity-80"
      size="medium"
    >
      <div
        className="pr-1"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
          />
          <path
            d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
          />
        </svg>
      </div>
      This is a medium Alert!
      <div
        className="pl-8 cursor-pointer"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
          />
        </svg>
      </div>
    </div>
    <br />
    <div
      className="alert primary large undefined opacity-80"
      size="large"
    >
      <div
        className="pr-1"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
          />
          <path
            d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
          />
        </svg>
      </div>
      This is a large Alert!
      <div
        className="pl-8 cursor-pointer"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example / Alerts Standard 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="alert alert medium undefined opacity-80"
    size="medium"
  >
    <div
      className="pr-1"
    />
    This is a Alert!
    <div
      className="pl-8 cursor-pointer"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        focusable="false"
        height={24}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example / Buttons Sizes 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className=" flex flex-col items-center justify-center"
  >
    <button
      className="btn primary small"
      disabled={false}
    >
      BUTTON
       
      <div
        className="ml-2"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
          />
        </svg>
      </div>
    </button>
    <br />
    <button
      className="btn primary medium"
      disabled={false}
    >
      BUTTON
       
      <div
        className="ml-2"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
          />
        </svg>
      </div>
    </button>
    <br />
    <button
      className="btn primary large"
      disabled={false}
    >
      BUTTON
       
      <div
        className="ml-2"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Example / Buttons Standard 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <button
    className="btn btn medium"
    disabled={false}
  >
    BUTTON
     
    
  </button>
</div>
`;

exports[`Storyshots Example/Accordions Filled 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="w-max"
  >
    <details
      className="relative  border-b-2 bg-gray-10 border-gray-30 text-gray-80"
      open={false}
    >
      <summary
        className="flex items-center flex-row-reverse justify-between p-2 cursor-pointer"
      >
        <div>
          <svg
            className="w-4 h-4 ml-2 "
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5m0 0l-5 5-5-5"
            />
          </svg>
        </div>
        What's the best thing about Switzerland?
      </summary>
      <div
        className="text-gray-60 mt-2 p-2"
      >
        I don't know, but the flag is a big plus.
      </div>
    </details>
  </div>
</div>
`;

exports[`Storyshots Example/Accordions Outlined 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="w-max"
  >
    <details
      className="relative rounded-default border-2 border-gray-30 text-gray-80"
    >
      <summary
        className="flex items-center justify-between p-2 cursor-pointer hover:bg-gray-10"
      >
        What's the best thing about Switzerland?
        <div>
          <svg
            className="w-4 h-4 ml-2"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5m0 0l-5 5-5-5"
            />
          </svg>
        </div>
      </summary>
      <div
        className="text-gray-60  mt-2 p-2"
      >
        I don't know, but the flag is a big plus.
      </div>
    </details>
  </div>
</div>
`;

exports[`Storyshots Example/Avatars Group 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="flex flex-wrap -space-x-4"
  >
    <div
      className="w-max relative"
    >
      <img
        alt="Mario"
        className="w-16 h-16 rounded-full shadow-md border-2 border-gray-30 object-cover"
        src="https://assets.kompasiana.com/items/album/2020/09/21/mariobros-5f68470ed541df32ac17dd02.jpg?t=o&v=325"
      />
      <div />
    </div>
    <div
      className="w-max relative"
    >
      <img
        alt="Mario"
        className="w-16 h-16 rounded-full shadow-md border-2 border-gray-30 object-cover"
        src="https://images.nintendolife.com/4d6e4792ce0db/luigi.original.jpg"
      />
      <div />
    </div>
    <div
      className="w-max relative"
    >
      <img
        alt="Mario"
        className="w-16 h-16 rounded-full shadow-md border-2 border-gray-30 object-cover"
        src="https://png.pngitem.com/pimgs/s/126-1261833_mushrooms-clipart-guy-new-super-mario-bros-mushroom.png"
      />
      <div />
    </div>
    <div
      className="w-max relative"
    >
      <img
        alt="Mario"
        className="w-16 h-16 rounded-full shadow-md border-2 border-gray-30 object-cover"
        src="https://i.pinimg.com/originals/1c/c6/19/1cc61968cf9336a6c7a7a36b352b9abc.jpg"
      />
      <div>
        <div
          className="w-3 h-3 bg-green-60 border border-white absolute right-0 top-2 rounded-full animate-bounce"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Avatars Standard 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="w-max relative"
  >
    <img
      alt="Mario"
      className="w-16 h-16 rounded-full shadow-md border-2 border-gray-30 object-cover"
      src="https://assets.kompasiana.com/items/album/2020/09/21/mariobros-5f68470ed541df32ac17dd02.jpg?t=o&v=325"
    />
    <div>
      <div
        className="w-3 h-3 bg-green-60 border border-white absolute right-0 top-2 rounded-full animate-bounce"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Badge Group 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="space-y-2"
  >
    <div
      className="badge label label undefined"
    >
      <div
        className="capitalize"
      >
        label
      </div>
      <div
        className="cursor-pointer px-auto"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
          />
        </svg>
      </div>
    </div>
    <div
      className="badge primary label undefined"
    >
      <div
        className="capitalize"
      >
        label
      </div>
      <div
        className="cursor-pointer px-auto"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
          />
        </svg>
      </div>
    </div>
    <div
      className="badge secondary label undefined"
    >
      <div
        className="capitalize"
      >
        label
      </div>
      <div
        className="cursor-pointer px-auto"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
          />
        </svg>
      </div>
    </div>
    <div
      className="badge success label undefined"
    >
      <div
        className="capitalize"
      >
        label
      </div>
      <div
        className="cursor-pointer px-auto"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
          />
        </svg>
      </div>
    </div>
    <div
      className="badge warning label undefined"
    >
      <div
        className="capitalize"
      >
        label
      </div>
      <div
        className="cursor-pointer px-auto"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
          />
        </svg>
      </div>
    </div>
    <div
      className="badge error label undefined"
    >
      <div
        className="capitalize"
      >
        label
      </div>
      <div
        className="cursor-pointer px-auto"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Badge Standard 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="badge label label undefined"
  >
    <div
      className="capitalize"
    >
      label
    </div>
    <div
      className="cursor-pointer px-auto"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Breadcrumbs Default 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb flex"
    >
      <li
        className="breadcrumb-item text-gray-60"
      >
        <a
          className="text-gray-60 hover:text-purple-50 mx-2 hover:underline"
          href="/home"
        >
          Home
        </a>
      </li>
      <li
        aria-current="page"
        className="breadcrumb-item active text-purple-50 hover:text-purple-50 mx-2"
      >
        Catalog
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Storyshots Example/Checkboxes Disabled 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="flex items-center"
  >
    <label
      className="pr-2"
      htmlFor="checkbox"
    >
      Disabled
    </label>
    <input
      aria-label={2}
      className="cursor-not-allowed h-4 w-4 focus:apperance-none"
      disabled={true}
      id={2}
      name="checkbox"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Example/Checkboxes Standard 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="flex items-center"
  >
    <label
      className="pr-2"
      htmlFor="checkbox"
    >
      Remember me
    </label>
    <input
      aria-label={1}
      className="auto h-4 w-4 focus:apperance-none"
      disabled={false}
      id={1}
      name="checkbox"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Example/Dropdown Filled 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="relative w-full"
  >
    <option
      className="text-gray-50 text-xs absolute left-0 m-1 -top-5"
      value=""
    >
      Select a Player:
    </option>
    <select
      className="border-b-2 border-gray-30 bg-gray-10 focus:outline-none focus:border-blue h-10 w-full"
      id=""
      name=""
    >
      <option
        className="text-gray-80"
        value="Mario"
      >
        Mario
      </option>
      <option
        className="text-gray-80"
        value="Luigi"
      >
        Luigi
      </option>
      <option
        className="text-gray-80"
        value="Princess Peach"
      >
        Princess Peach
      </option>
      <option
        className="text-gray-80"
        value="Diddy Kong"
      >
        Diddy Kong
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Example/Dropdown Outlined 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="relative w-full"
  >
    <option
      aria-label=""
      className="text-gray-50 text-xs absolute left-0 m-1 px-0.5 -top-3 bg-white"
      value=""
    >
      Select a Player:
    </option>
    <select
      className="rounded-default px-2 border-2 bg-transparent border-gray-30 text-gray-80 focus:outline-none focus:border-blue h-10 w-full"
      id=""
      name=""
    >
      <option
        className="text-gray-80"
        value="Mario"
      >
        Mario
      </option>
      <option
        className="text-gray-80"
        value="Luigi"
      >
        Luigi
      </option>
      <option
        className="text-gray-80"
        value="Princess Peach"
      >
        Princess Peach
      </option>
      <option
        className="text-gray-80"
        value="Diddy Kong"
      >
        Diddy Kong
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Example/Forms Contact Us 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="w-auto container m-2 rounded-extra shadow-md bg-white"
  >
    <div
      className="py-4 text-center"
    >
      <form
        className="m-4"
        method="POST"
        onSubmit={[Function]}
      >
        <p
          className="text-h1 mb-8 font-semibold"
        >
          Contact Us
        </p>
        <div
          className="w-full relative"
        >
          <label
            className="absolute left-0 m-1 px-0.5 bg-white -top-3 text-gray-60 text-xs   "
          >
            First Name
          </label>
          <input
            aria-label="First Name"
            className="w-full rounded-default px-2 h-10 border-2 border-gray-30 text-gray-80 focus:outline-none focus:border-blue"
            disabled={false}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
          />
        </div>
        <br />
        <div
          className="w-full relative"
        >
          <label
            className="absolute left-0 m-1 px-0.5 bg-white -top-3 text-gray-60 text-xs   "
          >
            Email Address
          </label>
          <input
            aria-label="Email Address"
            className="w-full rounded-default px-2 h-10 border-2 border-gray-30 text-gray-80 focus:outline-none focus:border-blue"
            disabled={false}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
          />
        </div>
        <br />
        <div
          className="mb-4 relative w-full"
        >
          <label
            className="absolute left-0 m-1 px-0.5 bg-white -top-3 text-gray-60 text-xs   "
            htmlFor="message"
          >
            Message
          </label>
          <textarea
            className="p-2 w-full rounded-default border-2 border-gray-30 placeholder-gray-30 text-gray-80 focus:outline-none focus:border-blue"
            cols={19}
            id="message"
            name="Message"
            placeholder="Leave a Message"
            rows={4}
          />
        </div>
        <button
          className="btn error mx-auto medium mx-auto"
          disabled={false}
        >
          SUBMIT
           
          <div
            className="ml-2"
          >
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,6H4A2,2,0,0,0,2,8V24a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V8A2,2,0,0,0,28,6ZM25.8,8,16,14.78,6.2,8ZM4,24V8.91l11.43,7.91a1,1,0,0,0,1.14,0L28,8.91V24Z"
              />
            </svg>
          </div>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Forms Subscribe Form 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="w-auto container m-2 rounded-extra shadow-md bg-white"
  >
    <div
      className="py-8 px-6"
    >
      <form
        className="text-center flex items-center justify-center flex-col"
        method="post"
        onSubmit={[Function]}
      >
        <h2
          className="text-h1 font-semibold"
        >
          Subscribe
        </h2>
        <br />
        <p
          className="text-body text-gray-60"
        >
          Subscribe to our newsletter to recive product announcements.
        </p>
        <br />
        <br />
        <div
          className="w-full relative"
        >
          <label
            className="absolute left-0 m-1 px-0.5 bg-white -top-3 text-gray-60 text-xs   "
          >
            Email Address
          </label>
          <input
            aria-label="Email Address"
            className="w-full rounded-default px-2 h-10 border-2 border-gray-30 text-gray-80 focus:outline-none focus:border-blue"
            disabled={false}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
          />
        </div>
        <br />
        <br />
        <br />
        <button
          className="btn primary medium"
          disabled={false}
        >
          Subscribe
           
          <div
            className="ml-2"
          >
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={24}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,6H4A2,2,0,0,0,2,8V24a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V8A2,2,0,0,0,28,6ZM25.8,8,16,14.78,6.2,8ZM4,24V8.91l11.43,7.91a1,1,0,0,0,1.14,0L28,8.91V24Z"
              />
            </svg>
          </div>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Input Filled 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="w-full relative"
  >
    <label
      className="absolute left-0 -top-4 text-gray-60 text-xs  "
    >
      Email Address
    </label>
    <input
      aria-label="Email Address"
      className=" h-8 px-2 w-full bg-gray-10 border-b-2 border-gray-30 text-gray-80  focus:outline-none focus:border-blue"
      disabled=""
      onChange={[Function]}
      placeholder=""
      required={true}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Example/Input Outlined 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="w-full relative"
  >
    <label
      className="absolute left-0 m-1 px-0.5 bg-white -top-3 text-gray-60 text-xs   "
    >
      Email Address
    </label>
    <input
      aria-label="Email Address"
      className="w-full rounded-default px-2 h-10 border-2 border-gray-30 text-gray-80 focus:outline-none focus:border-blue"
      disabled={false}
      onChange={[Function]}
      placeholder=""
      required={true}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Example/Links Standard 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div>
    
    <a
      alt=""
      className="text_link  hover:underline"
      href="https://www.google.com/"
      label="Google"
      underline="true"
    >
      Google
    </a>
  </div>
</div>
`;

exports[`Storyshots Example/MediaCard Card Media 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="pb-2 w-80 shadow-md"
  >
    <img
      alt="Zizkov Tower"
      className="w-full object-contain rounded-t-extra"
      height="100%"
      src="https://images.unsplash.com/photo-1630096446410-5706c853054e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
      width="100%"
    />
    <div
      className="px-3 align-left"
    >
      <div>
        <p
          className="uppercase weight-light text-gray-70 text-body1 pt-2"
        >
          Prague
        </p>
        <p
          className="text-h3 pb-2"
        >
          Zizkov Tower
        </p>
        <p
          className="w-max bg-gray-10 text-gray-60 italic text-body my-4 px-2 rounded-default shadow font-semibold"
        >
          Television
        </p>
        <p
          className=" text-gray-60 text-body pb-12 weight-light"
        >
          The tallest building in the Czech capital Prague will be without its landmark babies for the first time in sixteen years...
        </p>
      </div>
      <button
        className="btn secondary medium"
        disabled={false}
      >
        Read More
         
        
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Radio Group 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className=" flex items-center justify-start"
  >
    <label
      className="pr-2 text-gray-80"
      htmlFor={1}
    >
      Neutral
    </label>
    <input
      aria-label="group"
      id={1}
      name="group"
      type="radio"
      value=""
    />
  </div>
  <div
    className=" flex items-center justify-start"
  >
    <label
      className="pr-2 text-gray-80"
      htmlFor={2}
    >
      Positive
    </label>
    <input
      aria-label="group"
      id={2}
      name="group"
      type="radio"
      value=""
    />
  </div>
  <div
    className=" flex items-center justify-start"
  >
    <label
      className="pr-2 text-gray-80"
      htmlFor={3}
    >
      Negative
    </label>
    <input
      aria-label="group"
      id={3}
      name="group"
      type="radio"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Example/Radio Standard 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className=" flex items-center justify-start"
  >
    <label
      className="pr-2 text-gray-80"
      htmlFor={1}
    >
      Neutral
    </label>
    <input
      aria-label="example"
      id={1}
      name="example"
      type="radio"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Example/Range Example 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="flex flex-col items-baseline justify-center"
  >
    <label
      onChange={[Function]}
    >
      
    </label>
    <input
      class="appearance-none overflow-visible h-2 w-60 bg-white border-2 rounded-lg cursor-pointer"
      max={100}
      min={0}
      step={1}
      type="range"
    />
  </div>
</div>
`;

exports[`Storyshots Example/Template Banner Example 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className=" w-screen py-10 px-14 "
    style={
      Object {
        "backgroundImage": "url(https://images.unsplash.com/photo-1584476509080-54a2c8df05ea?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80)",
        "backgroundPosition": "center",
        "backgroundRepeat": "no-repeat",
        "backgroundSize": "cover",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="w-1/2 text-left"
    >
      <p
        className="text-h1 text-gray-10 pb-4 font-semibold"
      >
        Cash Register
      </p>
      <p
        className="text-h4 text-gray-10 pb-20 italic"
      >
        A cash register, sometimes called a till or automated money handling system, is a mechanical or electronic device for registering and calculating transactions at a point of sale. 
      </p>
    </div>
    <div
      className="flex items-center justify-start"
    >
      <a
        className="text-gray-20 text-body hover:underline mr-14"
        href="https://www.mastercard.com/global/en.html"
      >
        Paying with Credit Card ?
      </a>
      <button
        className="btn error large"
        disabled={false}
      >
        PAY NOW
         
        
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/TextArea Filled 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className=" relative w-full"
  >
    <label
      className="absolute left-0 mt-1 bg-transparent -top-5 text-gray-60 text-xs   "
      htmlFor="message"
    >
      Message
    </label>
    <textarea
      className="px-2 py-3 w-full   border-b-2 bg-gray-10 border-gray-30 text-gray-80 placeholder-gray-30 focus:outline-none focus:border-blue"
      cols={20}
      id="message"
      name="Message"
      placeholder="Leave a Message"
      rows={4}
    />
  </div>
</div>
`;

exports[`Storyshots Example/TextArea Outlined 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className=" relative w-full"
  >
    <label
      className="absolute left-0 m-1 px-0.5 bg-white -top-3 text-gray-60 text-xs   "
      htmlFor="message"
    >
      Message
    </label>
    <textarea
      className="p-2 w-full rounded-default border-2 border-gray-30 placeholder-gray-30 text-gray-80 focus:outline-none focus:border-blue"
      cols={20}
      id="message"
      name="Message"
      placeholder="Leave a Message"
      rows={4}
    />
  </div>
</div>
`;

exports[`Storyshots Example/TextCard Card Text 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="w-auto container m-2 rounded-extra shadow-md bg-white"
  >
    <div
      className="p-4"
    >
      <p
        className="uppercase weight-light text-gray-70 text-body1"
      >
        New York, NY
      </p>
      <p
        className=" text-h3 pb-2"
      >
        Cafe Luigi
      </p>
      <p
        className="text-gray-60 italic text-body pb-3 break-words"
      >
        Italian restaurant
      </p>
      <p
        className=" text-gray-60 text-body pb-3 weight-light"
      >
        Small plates, salads & sandwiches an intimate setting with 12 indoor seats.
      </p>
      <div
        className="mt-4 uppercase text-purple-50 font-semibold"
      >
        <a
          href="https://www.google.com"
          target="_blank"
        >
          Book a Table
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Tooltip Example 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    class="has-tooltip"
  >
    <span
      class="tooltip rounded-default shadow-lg p-1 bg-gray-10 text-red-50 mt-6 "
    >
      Some Nice Tooltip Text
    </span>
    Hover
  </div>
</div>
`;

exports[`Storyshots Showcase Landing Page 1`] = `
<div
  className="text-body text-gray-80 mx-auto w-max"
>
  <div
    className="py-6 px-4 bg-gray-10 h-full w-full flex flex-col space-y-20"
  >
    <nav
      className="px-4"
    >
      <ul
        className="flex items-center justify-between"
      >
        <li>
          <a
            className="text-gray-80 text-light"
            href="https://www.npmjs.com/package/minja-ui"
          >
            version 0.1.12
          </a>
        </li>
        <li>
          <a
            href="https://github.com/minime89-maker"
          >
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={32}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16,2a14,14,0,0,0-4.43,27.28c.7.13,1-.3,1-.67s0-1.21,0-2.38c-3.89.84-4.71-1.88-4.71-1.88A3.71,3.71,0,0,0,6.24,22.3c-1.27-.86.1-.85.1-.85A2.94,2.94,0,0,1,8.48,22.9a3,3,0,0,0,4.08,1.16,2.93,2.93,0,0,1,.88-1.87c-3.1-.36-6.37-1.56-6.37-6.92a5.4,5.4,0,0,1,1.44-3.76,5,5,0,0,1,.14-3.7s1.17-.38,3.85,1.43a13.3,13.3,0,0,1,7,0c2.67-1.81,3.84-1.43,3.84-1.43a5,5,0,0,1,.14,3.7,5.4,5.4,0,0,1,1.44,3.76c0,5.38-3.27,6.56-6.39,6.91a3.33,3.33,0,0,1,.95,2.59c0,1.87,0,3.38,0,3.84s.25.81,1,.67A14,14,0,0,0,16,2Z"
                fillRule="evenodd"
              />
            </svg>
          </a>
        </li>
      </ul>
    </nav>
    <main
      className="flex items-center justify-center flex-wrap text-center mb-8 xl:justify-around xl:pl-20"
    >
      <div
        className="mb-14 xl:pr-10"
      >
        <h1
          className="text-h1 font-semibold text-gray-80 xl:text-left xl:text-6xl xl:pb-2"
        >
          minja-ui
        </h1>
        <h3
          className="text-h3 font-light text-gray-60 xl:text-3xl"
        >
          Taiwind CSS Components
        </h3>
        <br />
        <br />
        <div
          className="flex items-center justify-between"
        >
          <div
            className="w-auto container m-2 rounded-extra shadow-md bg-white"
          >
            <div>
              <p
                className="py-2 px-3 font-semibold text-gray-80"
              >
                npm i minja-ui
              </p>
            </div>
          </div>
          <button
            className="btn secondary medium"
            disabled={false}
          >
            <a
              href="https://www.npmjs.com/package/minja-ui"
            >
              HOW TO USE?
            </a>
             
            
          </button>
        </div>
      </div>
      <div
        className="xl:transform xl:rotate-3 xl:overflow-x-hidden"
      >
        <div
          className="flex flex-wrap justify-center"
        >
          <div
            className="w-auto container m-2 rounded-extra shadow-md bg-white"
          >
            <div
              className="p-6 text-center flex flex-col items-center justify-center mt-4 w-80"
            >
               
              <div
                className="w-max relative"
              >
                <img
                  alt="Mario"
                  className="w-16 h-16 rounded-full shadow-md border-2 border-gray-30 object-cover"
                  src="https://images.unsplash.com/photo-1552058544-f2b08422138a?ixlib=rb-1.2.1&q=80&fm=jpg&crop=faces&fit=crop&h=200&w=200&ixid=eyJhcHBfaWQiOjE3Nzg0fQ"
                />
                <div>
                  <div
                    className="w-3 h-3 bg-green-60 border border-white absolute right-0 top-2 rounded-full animate-bounce"
                  />
                </div>
              </div>
              <h2
                className="text-h2 text-gray-80"
              >
                John Doe
              </h2>
              <p
                className="text-gray-60"
              >
                Web Developer
              </p>
              <p
                className="text-gray-60"
              >
                Graphic Designer
              </p>
              <div
                className="flex my-4 space-x-2 mb-14"
              >
                <div
                  className="badge label  undefined"
                >
                  <div
                    className="capitalize"
                  >
                    
                  </div>
                  <div
                    className="cursor-pointer px-auto"
                  >
                    Designer
                  </div>
                </div>
                <div
                  className="badge label  undefined"
                >
                  <div
                    className="capitalize"
                  >
                    
                  </div>
                  <div
                    className="cursor-pointer px-auto"
                  >
                    Developer
                  </div>
                </div>
                <div
                  className="badge label  undefined"
                >
                  <div
                    className="capitalize"
                  >
                    
                  </div>
                  <div
                    className="cursor-pointer px-auto"
                  >
                    Rider
                  </div>
                </div>
              </div>
              <button
                className="btn primary medium"
                disabled={false}
              >
                FOLLOW
                 
                
              </button>
            </div>
          </div>
          <div
            className="w-auto container m-2 rounded-extra shadow-md bg-white"
          >
            <div
              className="px-6 py-2 w-80"
            >
               
              <h2
                className="text-h2 font-semibold text-center"
              >
                Contact Us
              </h2>
              <br />
              <div
                className="space-y-3"
              >
                <div
                  className="w-full relative"
                >
                  <label
                    className="absolute left-0 m-1 px-0.5 bg-white -top-3 text-gray-60 text-xs   "
                  >
                    First Name
                  </label>
                  <input
                    aria-label="First Name"
                    className="w-full rounded-default px-2 h-10 border-2 border-gray-30 text-gray-80 focus:outline-none focus:border-blue"
                    disabled={false}
                    onChange={[Function]}
                    placeholder=""
                    required={true}
                    type="text"
                  />
                </div>
                <div
                  className="w-full relative"
                >
                  <label
                    className="absolute left-0 m-1 px-0.5 bg-white -top-3 text-gray-60 text-xs   "
                  >
                    Last Name
                  </label>
                  <input
                    aria-label="Last Name"
                    className="w-full rounded-default px-2 h-10 border-2 border-gray-30 text-gray-80 focus:outline-none focus:border-blue"
                    disabled={false}
                    onChange={[Function]}
                    placeholder=""
                    required={true}
                    type="text"
                  />
                </div>
                <br />
                <div
                  className=" relative w-full"
                >
                  <label
                    className="absolute left-0 m-1 px-0.5 bg-white -top-3 text-gray-60 text-xs   "
                    htmlFor="message"
                  >
                    Message
                  </label>
                  <textarea
                    className="p-2 w-full rounded-default border-2 border-gray-30 placeholder-gray-30 text-gray-80 focus:outline-none focus:border-blue"
                    cols={20}
                    id="message"
                    name="Message"
                    placeholder="Leave a Message"
                    rows={4}
                  />
                </div>
              </div>
              <button
                className="btn btn mx-auto my-2 medium mx-auto my-2"
                disabled={false}
              >
                SUBMIT
                 
                
              </button>
            </div>
          </div>
          <div
            className="w-auto container m-2 rounded-extra shadow-md bg-white"
          >
            <div
              className="space-y-4 p-6 md:my-8 w-80"
            >
               
              <div
                className="alert alert medium undefined opacity-80"
                size="medium"
              >
                <div
                  className="pr-1"
                />
                This is a Alert!
                <div
                  className="pl-8 cursor-pointer"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="alert secondary medium undefined opacity-80"
                size="medium"
              >
                <div
                  className="pr-1"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12,1C5.9,1,1,5.9,1,12s4.9,11,11,11s11-4.9,11-11C23,5.9,18.1,1,12,1z M11.1,6h1.8v8h-1.8V6z M12,19.2	c-0.7,0-1.2-0.6-1.2-1.2s0.6-1.2,1.2-1.2s1.2,0.6,1.2,1.2S12.7,19.2,12,19.2z"
                    />
                    <path
                      d="M13.2,18c0,0.7-0.6,1.2-1.2,1.2s-1.2-0.6-1.2-1.2s0.6-1.2,1.2-1.2S13.2,17.3,13.2,18z M12.9,6	h-1.8v8h1.8V6z"
                      data-icon-path="inner-path"
                      fill="none"
                      opacity="0"
                    />
                  </svg>
                </div>
                This is a Alert!
                <div
                  className="pl-8 cursor-pointer"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="alert warning medium undefined opacity-80"
                size="medium"
              >
                <div
                  className="pr-1"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 23a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 23zM15 12H17V21H15z"
                    />
                    <path
                      d="M29,30H3a1,1,0,0,1-.8872-1.4614l13-25a1,1,0,0,1,1.7744,0l13,25A1,1,0,0,1,29,30ZM4.6507,28H27.3493l.002-.0033L16.002,6.1714h-.004L4.6487,27.9967Z"
                    />
                  </svg>
                </div>
                This is Warning!
                <div
                  className="pl-8 cursor-pointer"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="alert success medium undefined opacity-80"
                size="medium"
              >
                <div
                  className="pr-1"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"
                    />
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                  </svg>
                </div>
                This is Success!
                <div
                  className="pl-8 cursor-pointer"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="alert error medium undefined opacity-80"
                size="medium"
              >
                <div
                  className="pr-1"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12	S22.6,28,16,28z"
                    />
                    <path
                      d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"
                    />
                  </svg>
                </div>
                This is Error!
                <div
                  className="pl-8 cursor-pointer"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="flex flex-wrap justify-center"
        >
          <div
            className="w-auto container m-2 rounded-extra shadow-md bg-white"
          >
            <div
              className="flex items-center justify-center p-6 md:mt-16 space-x-4 w-80"
            >
               
              <div
                className="space-y-4"
              >
                <button
                  className="btn primary medium"
                  disabled={false}
                >
                  BUTTON
                   
                  
                </button>
                <button
                  className="btn secondary medium"
                  disabled={false}
                >
                  BUTTON
                   
                  
                </button>
                <button
                  className="btn success medium"
                  disabled={false}
                >
                  BUTTON
                   
                  
                </button>
                <button
                  className="btn warning medium"
                  disabled={false}
                >
                  BUTTON
                   
                  
                </button>
                <button
                  className="btn error medium"
                  disabled={false}
                >
                  BUTTON
                   
                  
                </button>
              </div>
              <div
                className="space-y-4"
              >
                <button
                  className="btn link medium"
                  disabled={false}
                >
                  BUTTON
                   
                  
                </button>
                <button
                  className="btn btn medium"
                  disabled={false}
                >
                  BUTTON
                   
                  
                </button>
                <button
                  className="btn ghost medium"
                  disabled={false}
                >
                  BUTTON
                   
                  
                </button>
                <button
                  className="btn primary medium"
                  disabled={false}
                >
                  BUTTON
                   
                  <div
                    className="ml-2"
                  >
                    <svg
                      aria-hidden={true}
                      fill="currentColor"
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M28,6H4A2,2,0,0,0,2,8V24a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V8A2,2,0,0,0,28,6ZM25.8,8,16,14.78,6.2,8ZM4,24V8.91l11.43,7.91a1,1,0,0,0,1.14,0L28,8.91V24Z"
                      />
                    </svg>
                  </div>
                </button>
                <button
                  className="btn btn medium"
                  disabled={false}
                >
                  BUTTON
                   
                  <div
                    className="ml-2"
                  >
                    <svg
                      aria-hidden={true}
                      fill="currentColor"
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M28,6H4A2,2,0,0,0,2,8V24a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V8A2,2,0,0,0,28,6ZM25.8,8,16,14.78,6.2,8ZM4,24V8.91l11.43,7.91a1,1,0,0,0,1.14,0L28,8.91V24Z"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className="w-auto container m-2 rounded-extra shadow-md bg-white"
          >
            <div
              className="text-left"
            >
               
              <div
                className="pb-2 w-80 shadow-md"
              >
                <img
                  alt="Zizkov Tower"
                  className="w-full object-contain rounded-t-extra"
                  height="100%"
                  src="https://images.unsplash.com/photo-1630096446410-5706c853054e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
                  width="100%"
                />
                <div
                  className="px-3 align-left"
                >
                  <div>
                    <p
                      className="uppercase weight-light text-gray-70 text-body1 pt-2"
                    >
                      Prague
                    </p>
                    <p
                      className="text-h3 pb-2"
                    >
                      Zizkov Tower
                    </p>
                    <p
                      className="w-max bg-gray-10 text-gray-60 italic text-body my-4 px-2 rounded-default shadow font-semibold"
                    >
                      Television
                    </p>
                    <p
                      className=" text-gray-60 text-body pb-12 weight-light"
                    >
                      The tallest building in the Czech capital Prague will be without its landmark babies for the first time in sixteen years...
                    </p>
                  </div>
                  <button
                    className="btn secondary medium"
                    disabled={false}
                  >
                    Read More
                     
                    
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="w-auto container m-2 rounded-extra shadow-md bg-white"
          >
            <div
              className="px-6 mt-10 xl:my-14 pb-6 space-y-3 w-80"
            >
               
              <div
                className="relative w-full"
              >
                <option
                  className="text-gray-50 text-xs absolute left-0 m-1 -top-5"
                  value=""
                >
                  Select a Player:
                </option>
                <select
                  className="border-b-2 border-gray-30 bg-gray-10 focus:outline-none focus:border-blue mb-3 h-10 w-full"
                  id=""
                  name=""
                >
                  <option
                    className="text-gray-80"
                    value="Mario"
                  >
                    Mario
                  </option>
                  <option
                    className="text-gray-80"
                    value="Luigi"
                  >
                    Luigi
                  </option>
                  <option
                    className="text-gray-80"
                    value="Princess Peach"
                  >
                    Princess Peach
                  </option>
                  <option
                    className="text-gray-80"
                    value="Diddy Kong"
                  >
                    Diddy Kong
                  </option>
                </select>
              </div>
              <div
                className="w-full relative"
              >
                <label
                  className="absolute left-0 -top-4 text-gray-60 text-xs  "
                >
                  Email Address
                </label>
                <input
                  aria-label="Email Address"
                  className=" h-8 px-2 w-full bg-gray-10 border-b-2 border-gray-30 text-gray-80  focus:outline-none focus:border-blue"
                  disabled=""
                  onChange={[Function]}
                  placeholder=""
                  required={true}
                  type="text"
                />
              </div>
              <br />
              <div
                className=" relative w-full"
              >
                <label
                  className="absolute left-0 mt-1 bg-transparent -top-5 text-gray-60 text-xs   "
                  htmlFor="message"
                >
                  Message
                </label>
                <textarea
                  className="px-2 py-3 w-full   border-b-2 bg-gray-10 border-gray-30 text-gray-80 placeholder-gray-30 focus:outline-none focus:border-blue"
                  cols={20}
                  id="message"
                  name="Message"
                  placeholder="Leave a Message"
                  rows={4}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      className="border-t-2 border-gray-30 pt-4"
    >
      <div
        className="flex items-center justify-center space-x-2"
      >
        <div
          className="w-max relative"
        >
          <img
            alt="Mario"
            className="w-16 h-16 rounded-full shadow-md border-2 border-gray-30 object-cover"
            src="https://avatars.githubusercontent.com/u/77694499?v=4"
          />
          <div />
        </div>
        <span>
          <p
            className="font-light text-body1 text-gray-60"
          >
            Designed and Developed by 
            <br />
          </p>
          <a
            className="font-semibold text-h3 text-gray-80"
            href="https://www.linkedin.com/in/milijan-popovic/"
          >
            MINJA
          </a>
        </span>
      </div>
    </footer>
  </div>
</div>
`;
